--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="app.css" />
 
-    <title>Musuem of Candy</title>
+    <title>Museum of Candy</title>
   </head>
   <body>
     <nav
